# information-retrieval-courses-20240824

./: 20240824-stbi-final.ipynb  README.md  cancer_diagnosis_clean.csv  pyproject.toml
